[tool.poetry]
name = "paddles"
version = "0.1.0"
description = "A pedagogical algorithms and data structures library"
authors = ["Michel Wermelinger <michel.wermelinger@open.ac.uk>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://dsa-ou.github.io/paddles/"
repository = "https://github.com/dsa-ou/paddles"
keywords = ["algorithms", "data structures", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"
ruff = "^0.9.6"
pytype = "2024.4.11"    # same version as github.com/dsa-ou/algoesup
pdoc = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=paddles --cov-report term-missing --doctest-modules"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [              # ignore these rules:
    "ANN401",           # don't use `Any`
    "SIM110",           # simplify for-loops with all() or any()
    "ISC001", "COM812", # these rules may conflict with the formatter
    ]

[tool.ruff.lint.flake8-builtins]
# Make Ruff not complain about modules named like standard library modules.
builtins-allowed-modules = ["queue"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"   # this project's docstrings follow PEP 257

[tool.ruff.lint.per-file-ignores]
# In test code, don't flag assertions nor missing package docstrings.
"tests/*py" = ["S101", "D104"]
