[project]
name = "paddles"
version = "0.1.0"
description = "A pedagogical algorithms and data structures library"
authors = [{ name = "Michel Wermelinger", email = "michel.wermelinger@open.ac.uk" }]
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "algorithms",
    "data structures",
    "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://dsa-ou.github.io/paddles/"
Repository = "https://github.com/dsa-ou/paddles"
Changelog = "https://github.com/dsa-ou/paddles/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
    "pre-commit>=4.1.0,<5",
    "ruff>=0.9.6,<0.10",
    "pdoc>=15.0.1,<16",
    "ty>=0.0.1a21,<0.0.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""  # there's no src/ subdirectory

[[tool.uv.index]]
name = "test"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
addopts = "--cov=paddles --cov-report term-missing --doctest-modules"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [              # ignore these rules:
    "ANN401",           # don't use `Any`
    "SIM110",           # simplify for-loops with all() or any()
    "ISC001", "COM812", # these rules may conflict with the formatter
    ]

[tool.ruff.lint.flake8-builtins]
# Make Ruff not complain about modules named like standard library modules.
builtins-allowed-modules = ["queue"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"   # this project's docstrings follow PEP 257

[tool.ruff.lint.per-file-ignores]
# In test code, don't flag assertions, missing package docstrings, star imports.
"tests/*py" = ["S101", "D104", "F403", "F405"]
# In init files, don't flag unused and star imports.
"*/__init__.py" = ["F401", "F403"]
